@@ -1,0 +1,6 @@
+post_install() {
+    echo ">>>Note: the supplied gpsd udev rules is device-specific, so"
+    echo ">>>if your device isn't detected correctly, please use lsusb or"
+    echo ">>>another suitable tool to determine the proper device IDs and"
+    echo ">>>use the commented rules to fill in the blanks for your device."
+}
